<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/dark_orange" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="6dp">

            <EditText
                android:id="@+id/teacherNameUpdated"
                style="@style/EditTextStyle"
                android:autofillHints="@string/add_name"
                android:hint="@string/add_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/teacherEmailUpdated"
                style="@style/EditTextStyle"
                android:autofillHints="@string/add_email"
                android:hint="@string/add_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/dark_orange" />

        <Spinner
            android:id="@+id/spinnerUpdated"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/qualification"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/dark_orange" />
        <EditText
            android:id="@+id/teacherQualificationUpdated"
            style="@style/EditTextStyle"
            android:autofillHints="@string/qualification"
            android:hint="@string/qualification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textCapWords" />
    </LinearLayout>


<Button
    android:id="@+id/save_updated"
    android:layout_marginTop="40dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update"/>
</LinearLayout>